--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Video x Music Stream Bot",
     "description": "Telegram bot for Streaming Video & Music trought the Telegram Group Video Chat, powered by PyTgCalls and Pyrogram",
-    "logo": "https://telegra.ph/file/1c41ded2dd871eb36bd7e.png",
+    "logo": "https://telegra.ph/file/2a27cb8666827154b2c12.jpg",
     "keywords": [
         "py-tgcalls",
         "telegram bot",
@@ -12,7 +12,7 @@
         "pyrogram"
     ],
     "website": "https://t.me/levinachannel",
-    "repository": "https://github.com/levina-lab/video-stream",
+    "repository": "https://github.com/smsmsource/DISCOOLAYGG",
     "success_url": "https://t.me/dlwrml",
     "env": {
         "API_ID": {
